Tokens, cookies, cart

--- a/front-end/compass/sass/configs/_variables.scss
+++ b/front-end/compass/sass/configs/_variables.scss
@@ -5,4 +5,12 @@
 
 // COLORS
 // -------------------------------
+$green: #00AA72;
+$light-green: #35D4A0;
+$light-green-alt: #60e4aD;
+$dark-green: #207f60;
+$dark-green-alt: #006e4a;
 
+$orange: #ff5600;
+$light-orange: #ff8040;
+$light-orange-alt: #FFA273;
