--- a/front-end/views/main.html
+++ b/front-end/views/main.html
@@ -1,9 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
-	This is the home page
-</body>
-</html>
+<div class="container main-container">
+
+	<div class="splash">
+		<div class="row">
+			<div class="col-sm-6 text-center col-sm-offset-3">
+				<h1>Protein Source</h1>
+				<h3>Stupid Cheap and Stupid Fast</h3>
+			</div>
+		</div>
+
+	</div>
+
+
+
+
+</div>
