--- a/front-end/css/styles.css
+++ b/front-end/css/styles.css
@@ -1,3 +1,8 @@
+/* line 1, ../compass/sass/layout/_nav.scss */
+.nav {
+  background-color: #ffffff;
+}
+
 /* line 1, ../compass/sass/layout/_regi-dropdown.scss */
 .regi-dropdown {
   min-width: 300px;
@@ -113,9 +118,31 @@
   padding: 9px;
 }
 
-/* line 6, ../compass/sass/views/_home.scss */
-* {
-  color: black;
+/* line 1, ../compass/sass/views/_main.scss */
+.main-container {
+  padding: 0px;
+  margin: 0px;
+}
+/* line 4, ../compass/sass/views/_main.scss */
+.main-container .splash {
+  height: 75vh;
+  width: 100vw;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#207f60+0,60e4ad+40,35d4a0+100 */
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#00aa72+0,60e4ad+100 */
+  background: #00aa72;
+  /* Old browsers */
+  background: -moz-radial-gradient(center, ellipse cover, #00aa72 0%, #60e4ad 100%);
+  /* FF3.6-15 */
+  background: -webkit-radial-gradient(center, ellipse cover, #00aa72 0%, #60e4ad 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: radial-gradient(ellipse at center, #00aa72 0%, #60e4ad 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00aa72', endColorstr='#60e4ad',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */
+}
+/* line 21, ../compass/sass/views/_main.scss */
+.main-container .splash h1, .main-container .splash h3 {
+  color: white;
 }
 
 /* line 1, ../compass/sass/views/_register.scss */
@@ -131,28 +158,29 @@
 /* line 3, ../compass/sass/views/_options.scss */
 .container .product-box {
   transition: all .2s ease-in;
+  padding: 0;
 }
-/* line 5, ../compass/sass/views/_options.scss */
+/* line 6, ../compass/sass/views/_options.scss */
 .container .product-box h3 {
   font-size: 22px;
 }
-/* line 9, ../compass/sass/views/_options.scss */
+/* line 10, ../compass/sass/views/_options.scss */
 .container .product-box:hover {
   background-color: #f5f5f5;
   border-color: #000;
 }
-/* line 14, ../compass/sass/views/_options.scss */
+/* line 15, ../compass/sass/views/_options.scss */
 .container .selected {
   background-color: #f5f5f5;
   border-color: #000;
 }
 
-/* line 21, ../compass/sass/views/_options.scss */
+/* line 22, ../compass/sass/views/_options.scss */
 img {
   max-width: 100%;
 }
 
-/* line 29, ../compass/sass/styles.scss */
+/* line 26, ../compass/sass/styles.scss */
 body {
   padding-top: 70px;
 }
