--- a/front-end/views/main.html
+++ b/front-end/views/main.html
@@ -1,13 +1,51 @@
-<div class="container main-container">
+<link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
+
+<div class="container-fluid main-container">
 
 	<div class="splash">
-		<div class="row">
-			<div class="col-sm-6 text-center col-sm-offset-3">
-				<h1>Protein Source</h1>
-				<h3>Stupid Cheap and Stupid Fast</h3>
-			</div>
+
+	</div>
+	<div class="row down-arrow">
+<!-- 		<div class="col-xs-2 col-xs-offset-5"> -->
+			<span class="text-center glyphicon glyphicon-chevron-down"></span>
+<!-- 		</div> -->
+	</div>
+
+
+	<div class="row steps-header">
+		<div class="col-sm-12">
+			<h1>We take the headache out of fitness</h1>
+			<h3 class="gray-sub">Here's how it works</h3>
+		</div>
+	</div>
+
+	<div class="row steps">
+
+
+		<div class="col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 text-center">
+			<span class="glyphicon glyphicon-pencil big-glyph"></span>
+			<h3>Sign Up</h3>
+			<hr>
+			<p class="text-center">Registering is easy and takes less than five minutes.</p>
 		</div>
 
+		<div class="col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 text-center">
+			<img src="images/vectors/scoop_jar.jpg">
+			<h3 class="pick-powder">Pick Powder</h3>
+			<hr>
+			<p>On a budget? Vegetarian? Need top of the line performance? We have options for every muscle freak.</p>
+		</div>
+
+		<div class="col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 text-center">
+			<img src="images/vectors/muscle.png">
+			<h3 class="pick-powder">Get Huge</h3>
+			<hr>
+			<p>Sit back and relax as we deliver a steady supply of fuel every month. Change your options at any time.</p>
+		</div>
+	</div>
+
+	<div class="row sign-up-footer-wrapper">
+		<button class="btn btn-success sign-up-footer" ng-click="triggerSignUp()">Sign Up</button>
 	</div>
 
 
