--- a/front-end/compass/sass/layout/_nav.scss
+++ b/front-end/compass/sass/layout/_nav.scss
@@ -1,3 +1,13 @@
-.nav {
+.navbar-fixed-top {
 	background-color: #ffffff;
+	border-bottom: 1px solid gray;
+
+	img {
+		max-width: 40px;
+	}
+
+	.navbar-brand {
+		font-family: 'Lobster', cursive;
+	}
 }
+
