--- a/front-end/css/styles.css
+++ b/front-end/css/styles.css
@@ -1,6 +1,15 @@
 /* line 1, ../compass/sass/layout/_nav.scss */
-.nav {
+.navbar-fixed-top {
   background-color: #ffffff;
+  border-bottom: 1px solid gray;
+}
+/* line 5, ../compass/sass/layout/_nav.scss */
+.navbar-fixed-top img {
+  max-width: 40px;
+}
+/* line 9, ../compass/sass/layout/_nav.scss */
+.navbar-fixed-top .navbar-brand {
+  font-family: 'Lobster', cursive;
 }
 
 /* line 1, ../compass/sass/layout/_regi-dropdown.scss */
@@ -120,29 +129,72 @@
 
 /* line 1, ../compass/sass/views/_main.scss */
 .main-container {
+  overflow: hidden;
   padding: 0px;
   margin: 0px;
 }
-/* line 4, ../compass/sass/views/_main.scss */
+/* line 6, ../compass/sass/views/_main.scss */
+.main-container h1, .main-container h2, .main-container h3, .main-container h4 {
+  font-family: 'Lato', sans-serif;
+}
+/* line 10, ../compass/sass/views/_main.scss */
+.main-container .gray-sub {
+  color: #666;
+  font-weight: 300;
+}
+/* line 15, ../compass/sass/views/_main.scss */
+.main-container .big-glyph {
+  font-size: 30px;
+}
+/* line 18, ../compass/sass/views/_main.scss */
 .main-container .splash {
-  height: 75vh;
+  height: 92vh;
   width: 100vw;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#207f60+0,60e4ad+40,35d4a0+100 */
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#00aa72+0,60e4ad+100 */
-  background: #00aa72;
-  /* Old browsers */
-  background: -moz-radial-gradient(center, ellipse cover, #00aa72 0%, #60e4ad 100%);
-  /* FF3.6-15 */
-  background: -webkit-radial-gradient(center, ellipse cover, #00aa72 0%, #60e4ad 100%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: radial-gradient(ellipse at center, #00aa72 0%, #60e4ad 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00aa72', endColorstr='#60e4ad',GradientType=1 );
-  /* IE6-9 fallback on horizontal gradient */
+  background: url("../images/background_large.jpg") no-repeat center center;
+  background-size: cover;
+  border-bottom: 1px solid gray;
 }
-/* line 21, ../compass/sass/views/_main.scss */
+/* line 36, ../compass/sass/views/_main.scss */
 .main-container .splash h1, .main-container .splash h3 {
   color: white;
+}
+/* line 41, ../compass/sass/views/_main.scss */
+.main-container .down-arrow {
+  text-align: center;
+  margin: 0 auto;
+  float: none;
+  width: 50px;
+  font-size: 30px;
+  margin-top: 15px;
+}
+/* line 50, ../compass/sass/views/_main.scss */
+.main-container .steps-header {
+  margin-top: 40px;
+  margin: auto;
+  max-width: 700px;
+  text-align: center;
+}
+/* line 62, ../compass/sass/views/_main.scss */
+.main-container .steps {
+  text-align: center;
+  margin: 0 auto;
+  max-width: 1000px;
+  margin-top: 40px;
+}
+/* line 67, ../compass/sass/views/_main.scss */
+.main-container .steps .pick-powder {
+  margin-top: 8px;
+}
+/* line 70, ../compass/sass/views/_main.scss */
+.main-container .steps div {
+  margin-bottom: 35px;
+}
+/* line 75, ../compass/sass/views/_main.scss */
+.main-container .sign-up-footer-wrapper {
+  width: 100px;
+  margin: auto;
 }
 
 /* line 1, ../compass/sass/views/_register.scss */
@@ -180,7 +232,39 @@ img {
   max-width: 100%;
 }
 
-/* line 26, ../compass/sass/styles.scss */
-body {
-  padding-top: 70px;
+/* line 1, ../compass/sass/views/_checkout.scss */
+.tables {
+  margin: auto;
+  float: none;
+}
+
+/* line 27, ../compass/sass/styles.scss */
+html {
+  min-height: 100%;
+  position: relative;
+}
+
+/* line 32, ../compass/sass/styles.scss */
+.margined-container {
+  margin-top: 80px;
+  margin-bottom: 40px;
+}
+
+/* line 37, ../compass/sass/styles.scss */
+#views {
+  margin-bottom: 100px;
+}
+
+/* line 45, ../compass/sass/styles.scss */
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  text-align: center;
+}
+
+/* line 53, ../compass/sass/styles.scss */
+.next {
+  margin: auto;
 }
