--- a/front-end/views/checkout.html
+++ b/front-end/views/checkout.html
@@ -1,4 +1,174 @@
-<div class="container">
-	<button class="btn btn-primary" ng-click="checkout()">Order</button>
+<script src="https://checkout.stripe.com/checkout.js"></script>
 
+<div class="container margined-container">
+<div class="row">
+<div class="tables col-sm-6">
+	<div class="panel panel-default">
+		<div class="panel-heading">Order</div>
+		<table class="table">
+			<tr>
+				<td>Protein Type</td><td>{{type}}</td>
+			</tr>
+			<tr>
+				<td>Flavor</td><td>{{flavor}}</td>
+			</tr>
+			<tr>
+				<td>Size</td><td>{{size}}</td>
+			</tr>
+		</table>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading">Shipping <a href="" data-toggle="modal" data-target="#modal">[edit]</a></div>
+		<table class="table">	
+			<tr>
+				<td>First Name: </td><td>{{formFirstName}}</td>
+			</tr>
+			<tr>
+				<td>Last Name: </td><td>{{formLastName}}</td>
+			</tr>
+			<tr>
+				<td>Address 1: </td><td>{{formAddressA}}</td>
+			</tr>
+			<tr>
+				<td>Address 2: </td><td>{{formAddressB}}</td>
+			</tr>
+			<tr>
+				<td>City: </td><td>{{formCity}}</td>
+			</tr>
+			<tr>
+				<td>State: </td><td>{{formState}}</td>
+			</tr>
+			<tr>
+				<td>Zip: </td><td>{{formZip}}</td>
+			</tr>
+
+
+		</table>
+	</div>
+</div>
+</div>
+
+	<div class="text-center">
+	<button class="btn btn-primary order-button" ng-click="checkout()">Order</button>
+	</div>
+
+	<div class="modal fade" id="modal" tabindex="-1" role="dialog">
+	    <div class="modal-dialog" role="document">
+	        <div class="modal-content">
+	            <div class="modal-header">
+	                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	                <h4 class="modal-title">Modal title</h4>
+	            </div>
+	            <div class="modal-body">
+	                <form>
+	                <div class="row">
+	                	<div class="form-group col-sm-6">
+	                		<label for="first-name">First Name:</label>
+	                		<input type="text" class="form-control" id="first-name" ng-model="formFirstName">
+                		</div>
+                		<div class="form-group col-sm-6">
+	                		<label for="first-name">Last Name:</label>
+	                		<input type="text" class="form-control" id="last-name" ng-model="formLastName">
+                		</div>
+            		</div>
+            		<div class="row">
+            			<div class="form-group col-sm-12">
+	                		<label for="address-one">Address 1</label>
+	                		<input type="text" class="form-control" id="address-one" ng-model="formAddressA">
+                		</div>
+            		</div>
+            		<div class="row">
+            			<div class="form-group col-sm-12">
+	                		<label for="address-two">Address 2</label>
+	                		<input type="text" class="form-control" id="address-two" ng-model="formAddressB">
+                		</div>
+            		</div>
+            		<div class="row">
+            			<div class="form-group col-sm-6">
+	                		<label for="city">City</label>
+	                		<input type="text" class="form-control" id="city" ng-model="formCity">
+                		</div>
+                		<div class="form-group col-sm-3">
+							<label for="state" class="col-sm-2 control-label">State</label>
+							<div class="col-sm-10">
+								<select class="form-control" id="state" name="state" ng-model="formState">
+									<option value="">N/A</option>
+									<option value="AK">Alaska</option>
+									<option value="AL">Alabama</option>
+									<option value="AR">Arkansas</option>
+									<option value="AZ">Arizona</option>
+									<option value="CA">California</option>
+									<option value="CO">Colorado</option>
+									<option value="CT">Connecticut</option>
+									<option value="DC">District of Columbia</option>
+									<option value="DE">Delaware</option>
+									<option value="FL">Florida</option>
+									<option value="GA">Georgia</option>
+									<option value="HI">Hawaii</option>
+									<option value="IA">Iowa</option>
+									<option value="ID">Idaho</option>
+									<option value="IL">Illinois</option>
+									<option value="IN">Indiana</option>
+									<option value="KS">Kansas</option>
+									<option value="KY">Kentucky</option>
+									<option value="LA">Louisiana</option>
+									<option value="MA">Massachusetts</option>
+									<option value="MD">Maryland</option>
+									<option value="ME">Maine</option>
+									<option value="MI">Michigan</option>
+									<option value="MN">Minnesota</option>
+									<option value="MO">Missouri</option>
+									<option value="MS">Mississippi</option>
+									<option value="MT">Montana</option>
+									<option value="NC">North Carolina</option>
+									<option value="ND">North Dakota</option>
+									<option value="NE">Nebraska</option>
+									<option value="NH">New Hampshire</option>
+									<option value="NJ">New Jersey</option>
+									<option value="NM">New Mexico</option>
+									<option value="NV">Nevada</option>
+									<option value="NY">New York</option>
+									<option value="OH">Ohio</option>
+									<option value="OK">Oklahoma</option>
+									<option value="OR">Oregon</option>
+									<option value="PA">Pennsylvania</option>
+									<option value="PR">Puerto Rico</option>
+									<option value="RI">Rhode Island</option>
+									<option value="SC">South Carolina</option>
+									<option value="SD">South Dakota</option>
+									<option value="TN">Tennessee</option>
+									<option value="TX">Texas</option>
+									<option value="UT">Utah</option>
+									<option value="VA">Virginia</option>
+									<option value="VT">Vermont</option>
+									<option value="WA">Washington</option>
+									<option value="WI">Wisconsin</option>
+									<option value="WV">West Virginia</option>
+									<option value="WY">Wyoming</option>
+								</select>
+							</div>
+						</div>
+						<div class="form-group col-sm-3">
+	                		<label for="zip">Zip</label>
+	                		<input type="number" class="form-control" id="zip" ng-model="formZip">
+                		</div>
+            		</div>
+
+
+
+            		</form>
+
+	            </div>
+	            <div class="modal-footer">
+	                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+	                <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="submitShipping()">Submit</button>
+	            </div>
+	        </div>
+	        <!-- /.modal-content -->
+	    </div>
+	    <!-- /.modal-dialog -->
+	</div>
+	<!-- /.modal -->
+
+	
 </div>
