--- a/front-end/views/flavor.html
+++ b/front-end/views/flavor.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container margined-container">
 	<div class="row">
 		
 		<div class="col-sm-2">
@@ -65,7 +65,7 @@
 
 		<div class="row">
 			<div class="col-sm-2 col-sm-offset-5">
-				<a href="/#/size"><button class="btn btn-primary btn-sm" ng-click="saveSelected('flavor')">Next</button></a>
+				<a href="/#/size"><button class="btn btn-primary btn-sm next" ng-click="saveSelected('flavor')">Next</button></a>
 			</div>
 		</div>
 
