--- a/front-end/views/powdertype.html
+++ b/front-end/views/powdertype.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container margined-container">
 	<div class="row">
 		
 		<div class="col-sm-4">
@@ -50,7 +50,7 @@
 
 		<div class="row">
 			<div class="col-sm-2 col-sm-offset-5">
-				<a href="/#/flavor"><button class="btn btn-primary" ng-click="saveSelected('powderType')">Next</button></a>
+				<a href="/#/flavor"><button class="btn btn-primary next" ng-click="saveSelected('powderType')">Next</button></a>
 			</div>
 		</div>
 
