--- a/views/flavor.html
+++ b/views/flavor.html
@@ -65,7 +65,7 @@
 
 		<div class="row">
 			<div class="col-sm-2 col-sm-offset-5">
-				<a href="/size"><button class="btn btn-primary btn-sm next" ng-click="saveSelected('flavor')">Next</button></a>
+				<a href="/#/size"><button class="btn btn-primary btn-sm next" ng-click="saveSelected('flavor')">Next</button></a>
 			</div>
 		</div>
 
